# ChatGPTLawCompare

./: README.md  main.py  prepare_data.py  pyproject.toml  results.csv
