[tool.poetry]
name = "chatgptlawcompare"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@outlook.stg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
weaviate-client = "^3.12.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.102"
openai = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
